--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ ext {
 	slf4jVersion = '1.7.36'
 	logbackVersion = '1.3.4'
 	tomcatVersion = '9.0.68'
+	
+	jsoupVersion = '1.15.3'
+	jsonVersion = '20210307'
 }
 
 dependencies {
@@ -55,11 +58,12 @@ dependencies {
 	implementation "org.mybatis:mybatis:3.5.11"
 	implementation 'org.mybatis:mybatis-spring:2.0.7'
 	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.5'
-	implementation 'org.springframework.session:spring-session-data-redis:2.7.2'
-	implementation 'org.springframework.data:spring-data-redis:2.7.14'
 	implementation "org.freemarker:freemarker:2.3.31"
-	runtimeOnly 'org.slf4j:jcl-over-slf4j:' + slf4jVersion
 	
+	implementation 'org.jsoup:jsoup:' + jsoupVersion
+	implementation 'org.json:json:' + jsonVersion
+	
+	runtimeOnly 'org.slf4j:jcl-over-slf4j:' + slf4jVersion
 }
 
 farm {
