--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,14 +37,14 @@
 	</listener>
 
 	<servlet>
-		<servlet-name>project</servlet-name>
+		<servlet-name>be</servlet-name>
 		<servlet-class>
 			org.springframework.web.servlet.DispatcherServlet
 		</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>project</servlet-name>
+		<servlet-name>be</servlet-name>
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 
