--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ ext {
 
     jsoupVersion = '1.15.3'
     jsonVersion = '20210307'
+    jacksonVersion = '2.9.10'
 }
 
 dependencies {
@@ -62,12 +63,15 @@ dependencies {
     implementation 'org.jsoup:jsoup:' + jsoupVersion
     implementation 'org.json:json:' + jsonVersion
 
+    implementation 'com.fasterxml.jackson.core:jackson-databind:' + jacksonVersion
+    implementation 'com.fasterxml.jackson.core:jackson-core:' + jacksonVersion
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:' + jacksonVersion
+
     runtimeOnly 'org.slf4j:jcl-over-slf4j:' + slf4jVersion
 }
 
 gretty {
     servletContainer = 'jetty9'
-    host = '127.0.0.1'
     httpPort = 9001
     scanInterval = 1
     contextPath = ''
