--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 buildscript {
     repositories {
-        mavenCentral()
         jcenter()
     }
     dependencies {
@@ -32,46 +31,59 @@ tasks.withType(JavaCompile) {
 }
 
 ext {
-    springVersion = '5.3.30'
-    springSecurityVersion = '5.7.4'
-    slf4jVersion = '1.7.36'
-    logbackVersion = '1.3.4'
-    tomcatVersion = '9.0.68'
-
-    jsoupVersion = '1.15.3'
-    jsonVersion = '20210307'
-    jacksonVersion = '2.9.10'
+	springVersion = '5.3.39'
+	springSecrityVersion = '5.7.4'
+	slf4jVersion = '1.7.36'
+	logbackVersion = '1.3.4'
+	tomcatVersion = '9.0.68'
+	
+	jsoupVersion = '1.15.3'
+	
+	jsonVersion = '20210307'
 }
 
 dependencies {
-    implementation 'org.slf4j:slf4j-api:' + slf4jVersion
+	implementation 'org.slf4j:slf4j-api:' + slf4jVersion
+	runtimeOnly 'org.slf4j:jcl-over-slf4j:' + slf4jVersion
+	implementation 'ch.qos.logback:logback-core:' + logbackVersion
+	implementation 'ch.qos.logback:logback-classic:' + logbackVersion
+
     implementation "org.springframework:spring-core:" + springVersion
-    implementation "org.springframework:spring-beans:" + springVersion
-    implementation "org.springframework:spring-web:" + springVersion
-    implementation "org.springframework:spring-webmvc:" + springVersion
-    implementation 'org.springframework:spring-context:' + springVersion
-    implementation 'org.springframework:spring-context-support:' + springVersion
-    implementation 'org.springframework:spring-jdbc:' + springVersion
-    implementation 'org.springframework.security:spring-security-core:' + springSecurityVersion
-    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
-    implementation 'org.apache.commons:commons-pool2:2.11.1'
-    implementation "org.mybatis:mybatis:3.5.11"
-    implementation 'org.mybatis:mybatis-spring:2.0.7'
-    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.5'
-    implementation "org.freemarker:freemarker:2.3.31"
+	implementation "org.springframework:spring-beans:" + springVersion
+	implementation "org.springframework:spring-web:" + springVersion
+	implementation "org.springframework:spring-webmvc:" + springVersion
+	implementation 'org.springframework:spring-context:' + springVersion
+	implementation 'org.springframework:spring-context-support:' + springVersion
+	implementation 'org.springframework:spring-jdbc:' + springVersion
+	implementation 'org.springframework.security:spring-security-core:' + springSecrityVersion
 
-    implementation 'org.jsoup:jsoup:' + jsoupVersion
-    implementation 'org.json:json:' + jsonVersion
+	implementation 'org.apache.commons:commons-dbcp2:2.9.0'
+	implementation 'org.apache.commons:commons-pool2:2.11.1'
+	
+	implementation 'org.jsoup:jsoup:' + jsoupVersion
+	
+	implementation 'org.json:json:' + jsonVersion
+	
+	implementation "org.mybatis:mybatis:3.5.11"
+	implementation 'org.mybatis:mybatis-spring:2.0.7'
+	implementation 'mysql:mysql-connector-java:8.0.33'
+	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.5'
 
-    implementation 'com.fasterxml.jackson.core:jackson-databind:' + jacksonVersion
-    implementation 'com.fasterxml.jackson.core:jackson-core:' + jacksonVersion
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:' + jacksonVersion
+	implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
+	implementation "org.freemarker:freemarker:2.3.31"
 
-    runtimeOnly 'org.slf4j:jcl-over-slf4j:' + slf4jVersion
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
+
+    
+}
+
+
+farm {
+  // 'jetty7', 'jetty8', 'jetty9', 'jetty93', 'jetty94', 'tomcat7', 'tomcat8'
+	servletContainer = 'jetty94'
 }
 
 gretty {
-    servletContainer = 'jetty9'
     httpPort = 9001
     scanInterval = 1
     contextPath = ''
@@ -98,7 +110,7 @@ allprojects {
 }
 
 war {
-    archiveName = "ROOT.war"
+    archiveFileName = "ROOT.war"
 }
 
 task deployWar(type: Copy) {
